--- a/jobs/calico/templates/bin/calico_ctl.erb
+++ b/jobs/calico/templates/bin/calico_ctl.erb
@@ -48,7 +48,7 @@ cat  > /etc/cni/net.d/10-calico.conf <<EOF
 }
 EOF
 
-calicoc node run --node-image=calico/node:v3.10.1 \
+calicoctl node run --node-image=calico/node:v3.10.1 \
     1>> $LOG_DIR/calico.stdout.log \
     2>> $LOG_DIR/calico.stderr.log
 }
