--- a/jobs/calico/templates/bin/calico_ctl.erb
+++ b/jobs/calico/templates/bin/calico_ctl.erb
@@ -47,6 +47,7 @@ cat  > /etc/cni/net.d/10-calico.conf <<EOF
   }
 }
 EOF
+docker import /var/vcap/calico/calico_node_3_10_1.tar
 
 calicoctl node run --node-image=calico/node:v3.10.1 \
     1>> $LOG_DIR/calico.stdout.log \
